--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 <body>
   <body>
   <h2>PingPong Feedback</h2>
-  <form action="https://formsubmit.co/pingponghospitality@gmail.com" method="POST">
+  <form action="https://script.google.com/macros/s/AKfycbwVrDBp1GaH37RYlFGCFm0vOkDg7adPVDFOb4drjXIm1SB4Gxq1g3gqH2EzaPKLgdQ4GQ/exec" method="POST">
     <input type="hidden" name="_captcha" value="false">
-    <input type="text" name="name" placeholder="Mobile Number (optional)">
+    <input type="text" name="mobile" placeholder="Mobile Number (optional)">
 
     <label>How was the food?</label>
     <div class="stars" id="starRating">
