--- a/index.html
+++ b/index.html
@@ -56,37 +56,60 @@
 <body>
   <body>
   <h2>PingPong Feedback</h2>
-  <form action="https://script.google.com/macros/s/AKfycbwVrDBp1GaH37RYlFGCFm0vOkDg7adPVDFOb4drjXIm1SB4Gxq1g3gqH2EzaPKLgdQ4GQ/exec" method="POST">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="text" name="mobile" placeholder="Mobile Number (optional)">
+  <form id="feedbackForm">
+  <input type="text" name="mobile" placeholder="Mobile Number (optional)">
 
-    <label>How was the food?</label>
-    <div class="stars" id="starRating">
-      <span class="star" data-value="1">★</span>
-      <span class="star" data-value="2">★</span>
-      <span class="star" data-value="3">★</span>   
-      <span class="star" data-value="4">★</span>
-      <span class="star" data-value="5">★</span>
-    </div>
-    <input type="hidden" name="rating" id="ratingInput" required>
+  <label>How was the food?</label>
+  <div class="stars" id="starRating">
+    <span class="star" data-value="1">★</span>
+    <span class="star" data-value="2">★</span>
+    <span class="star" data-value="3">★</span>
+    <span class="star" data-value="4">★</span>
+    <span class="star" data-value="5">★</span>
+  </div>
+  <input type="hidden" name="rating" id="ratingInput" required>
 
-    <textarea name="feedback" rows="4" placeholder="Write your feedback here..." required></textarea>
-    <button type="submit">Send Feedback</button>
-  </form>
+  <textarea name="feedback" rows="4" placeholder="Write your feedback here..." required></textarea>
+  <button type="submit">Send Feedback</button>
+</form>
 
-  <script>
-    const stars = document.querySelectorAll('.star');
-    const ratingInput = document.getElementById('ratingInput');
+<script>
+  const stars = document.querySelectorAll('.star');
+  const ratingInput = document.getElementById('ratingInput');
 
-    stars.forEach((star, index) => {
-      star.addEventListener('click', () => {
-        ratingInput.value = star.getAttribute('data-value');
-        stars.forEach(s => s.classList.remove('selected'));
-        for (let i = 0; i <= index; i++) {
-          stars[i].classList.add('selected');
-        }
-      });
+  stars.forEach((star, index) => {
+    star.addEventListener('click', () => {
+      ratingInput.value = star.getAttribute('data-value');
+      stars.forEach(s => s.classList.remove('selected'));
+      for (let i = 0; i <= index; i++) {
+        stars[i].classList.add('selected');
+      }
     });
-  </script>
+  });
+
+  // Submit form using JavaScript (fetch)
+  document.getElementById('feedbackForm').addEventListener('submit', function (e) {
+    e.preventDefault();
+
+    const form = e.target;
+    const formData = new FormData(form);
+
+    fetch("https://script.google.com/macros/s/AKfycbwVrDBp1GaH37RYlFGCFm0vOkDg7adPVDFOb4drjXIm1SB4Gxq1g3gqH2EzaPKLgdQ4GQ/exec", {
+      method: "POST",
+      body: formData
+    })
+    .then(response => {
+      if (response.ok) {
+        window.location.href = "https://pingpongSK124.github.io/feedback-form/thank-you.html";
+      } else {
+        alert("Something went wrong. Please try again.");
+      }
+    })
+    .catch(error => {
+      console.error("Error:", error);
+      alert("Error sending feedback.");
+    });
+  });
+</script>
 </body>
 </html>
