--- a/thank-you.html
+++ b/thank-you.html
@@ -6,41 +6,51 @@
   <title>Thank You</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f6f8fa;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f4f7f4;
       margin: 0;
-    }
-    .message-box {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 0;
+      display: flex;
+      height: 100vh;
+      align-items: center;
+      justify-content: center;
       text-align: center;
     }
+
+    .container {
+      padding: 20px;
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      max-width: 90%;
+      width: 400px;
+    }
+
     h1 {
       color: #175e3d;
+      font-size: 1.8rem;
+      margin-bottom: 10px;
     }
+
     p {
-      margin: 15px 0;
+      color: #333;
+      font-size: 1rem;
     }
-    a {
-      display: inline-block;
-      margin-top: 15px;
-      text-decoration: none;
-      color: #3498db;
-      font-weight: bold;
+
+    @media (max-width: 400px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+      p {
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="message-box">
+  <div class="container">
     <h1>Thank You!</h1>
-    <p>We appreciate you taking the time to help us improve.</p>
+    <p>Your feedback has been submitted successfully.</p>
   </div>
 </body>
 </html>
-
