--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: sans-serif;
       padding: 20px;
-      background: #d5e6dc;
+      background: #f4f7f4;
     }
     h2 {
       color: #175e3d;
